post request done

--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "mdb-vue-ui-kit": "^1.9.0",
-    "axios": "^0.25.0", 
+    "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
     "chokidar": "^3.5.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "mdb-vue-ui-kit": "^1.9.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
     "vue": "^3.0.0",
     "vue-metamask": "^2.1.0",
-    "vue-router": "^4.0.0-0",
-    "express": "^4.17.2" 
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
